# django-study-doit

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
board/: models.py  urls.py  views.py
board/migrations/: 0001_initial.py
django_project_doit/: asgi.py  settings.py  urls.py  wsgi.py
mysql-data/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mysql-data/#innodb_redo/: #ib_redo10  #ib_redo9
mysql-data/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
mysql-data/mysql/: general_log_215.sdi  slow_log_216.sdi
mysql-data/performance_schema/: accounts_147.sdi  binary_log_trans_191.sdi  cond_instances_82.sdi  data_lock_waits_163.sdi  data_locks_162.sdi  error_log_83.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_errors_su_144.sdi  events_errors_su_145.sdi  events_stages_cu_113.sdi  events_stages_hi_114.sdi  events_stages_hi_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_stages_su_119.sdi  events_stages_su_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  events_statement_124.sdi  events_statement_125.sdi  events_statement_126.sdi  events_statement_127.sdi  events_statement_128.sdi  events_statement_129.sdi  events_statement_130.sdi  events_statement_131.sdi  (+82 more)
(+13 files in other folders)
