[tool.poetry]
name = "203 django-study-doit"
version = "0.1.0"
description = ""
authors = ["creedboy <polozh@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
mysqlclient = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
